--- a/index.css
+++ b/index.css
@@ -1,10 +1,26 @@
+header {
+    margin-bottom: 12px;
+    display: flex;
+    justify-content: space-between;
+}
+
+header * {
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+header h1 {
+    display: flex;
+    gap: 8px;
+}
+
 button:focus {
     box-shadow: none;
 }
 
 #theme-button {
     all: unset;
-    float: right;
+    display: flex;
 }
 
 .to-do-list {
